--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <img src="img\Logo branca.png" alt="Logo 3D Tecnology">
     </a>
     <nav class="navbar">
-      <a href="#home">Home</a>
-      <a href="#serviços">Serviços oferecidos</a>
-      <a href="#historia">Quem Somos</a>
+      <a href="index.html">Home</a>
+      <a href="servicos.html">Serviços oferecidos</a>
+      <a href="historia.html">Quem Somos</a>
       <a href="#footer">Contato</a>
     </nav>
   </header>
