--- a/servicos.html
+++ b/servicos.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços oferecidos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <!--HEADER-->
+  <header class="header">
+    <a href="#" class="logo">
+      <img src="img\Logo branca.png" alt="Logo 3D Tecnology">
+    </a>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="servicos.html">Serviços oferecidos</a>
+      <a href="historia.html">Quem Somos</a>
+      <a href="#footer">Contato</a>
+    </nav>
+  </header>
     
+
+  <!--FOOTER-->
+  <footer id="footer" class="footer">
+<div class="container">
+<div class="footer-col">
+  <h4 class="headin-footer">Entre em contato conosco</h4>
+  <ul>
+    <li><a href="https://wa.me/554192024096">(41) 99202-4096</a>
+    </li>
+    <li>
+      <a href="#">ademar@3dtecnology.com.br</a>
+    </li>
+  </ul>
+</div>
+<div class="footer-col">
+  <h4 class="heading-footer">Siga-nos</h4>
+  <div class="social-links">
+    <a href="https://www.facebook.com/profile.php?id=61580671224998"><ion-icon name="logo-facebook"></ion-icon></a>
+    <a href="https://www.instagram.com/3d_tecnology/"><ion-icon name="logo-instagram"></ion-icon></a>
+    <a href="https://br.linkedin.com/in/ademar-santos-cordeiro-624917124"><ion-icon name="logo-linkedin"></ion-icon></a>
+  </div>
+</div>
+</div>
+<div class="footer-bottom">
+  <p>&copy; 2025 3D Tecnology. Todos os direitos reservados.</p>
+</div>
+  </footer>
 </body>
+ <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
