--- a/servicos.html
+++ b/servicos.html
@@ -9,7 +9,7 @@
 <body>
      <!--HEADER-->
   <header class="header">
-    <a href="#" class="logo">
+    <a href="index.html" class="logo">
       <img src="img\Logo branca.png" alt="Logo 3D Tecnology">
     </a>
     <nav class="navbar">
