--- a/servicos.html
+++ b/servicos.html
@@ -19,36 +19,13 @@
       <a href="#footer">Contato</a>
     </nav>
   </header>
-  <br>
 
   <!--HISTÓRIA-->
   <section id="historia" class="historia">
     <div class="content">
     <h1 class="heading"><span>Nosso serviços</span></h1>
-      <p>A 3D Tecnology nasceu da necessidade de oferecer soluções eficientes em automação industrial e a 
-        integração entre os sistemas com excelência, em 2018 quando juntamos a vontade de empreender, a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria, criamos a imagine 3D, focada em oferecer soluções personalizas em impressão 3D para a indústria, 
-        sempre priorizando o cliente, potencializando suas ideias e desenvolvendo projetos de melhoria contínua. 
-        </p>
-        <p>
-          Mas percebemos que a indústria estava mudando rapidamente, então além das soluções em impressão 3D 
-          começamos a atender a demanda do mercado referente a carência de automação e otimização dos processos, 
-          realizamos alguns Retrofits em equipamentos manuais ou que já estavam obsoletos 
-          e atualizamos eles para que sua vida útil retornasse a quase 100% e sua eficiência aumentasse. 
-          Com isso nasceu a 3D Tecnology, atendendo nossos clientes em todas as dimensões da tecnologia.
-        </p>
-        <p>
-          Consequentemente surgiram demandas de desenvolvimento de equipamentos personalizados, 
-          integração de processos produtivos independentes, e aumentou a procura do mercado 
-          por melhoria contínua e controle em tempo real dos processos para atingir o status de indústria 4.0. 
-          Com isso desenvolvemos um sistema supervisório completo e de baixo custo para atender nossos clientes,  
-          realizando consultorias, onde conseguimos obter melhorias significativas 
-          fazendo alguns ajustes em layout, equipamentos e processos.
-        </p>
-        <p>
-          Nossos clientes atuam nos mais diversos segmentos industriais, 
-          somos referência no setor 
-          e seguimos investindo em novas tecnologias 
-          para impulsionar a eficiência da indústria. 
+      <p>Na 3D Tecnology nós oferecemos uma variedade de serviços 
+        para atender as necessidades específicas de cada cliente.  
         </p>
     </div>
 
