--- a/servicos.html
+++ b/servicos.html
@@ -21,7 +21,7 @@
   </header>
 
   <!--TEXTO-->
-  <section id="historia" class="historia">
+  <section id="about" class="about">
     <div class="content">
     <h1 class="heading"><span>Nosso serviços</span></h1>
       <p>Na 3D Tecnology nós oferecemos uma variedade de serviços 
