--- a/servicos.html
+++ b/servicos.html
@@ -21,9 +21,9 @@
   </header>
 
   <!--TEXTO-->
-  <section id="about" class="about">
+  <section id="historia" class="historia">
     <div class="content">
-    <h1 class="heading">Nosso serviços</h1>
+    <h1 class="heading"><span>Nosso serviços</span></h1>
       <p>Na 3D Tecnology nós oferecemos uma variedade de serviços 
         para atender as necessidades específicas de cada cliente.  
         </p>
