--- a/historia.html
+++ b/historia.html
@@ -23,7 +23,7 @@
   <!--HISTÓRIA-->
   <section id="historia" class="historia">
     <div class="content">
-    <h1 class="heading"><span>Quem somos</span></h1>
+    <h1 class="heading" style="padding-top: 5rem;"><span>Quem somos</span></h1>
       <p>A 3D Tecnology nasceu da necessidade de oferecer soluções eficientes em automação industrial e a 
         integração entre os sistemas com excelência, em 2018 quando juntamos a vontade de empreender, a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria, criamos a imagine 3D, focada em oferecer soluções personalizas em impressão 3D para a indústria, 
         sempre priorizando o cliente, potencializando suas ideias e desenvolvendo projetos de melhoria contínua. 
