--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
-     <button href="historia.html" style="align-items: center;" type="button" class="btn btn-outline-success">Conheça mais sobre a nossa história</button>
+     <button href="historia.html" type="button" class="btn .btn-outline-success">Conheça mais sobre a nossa história</button>
 
     </div>
 
