--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
-     <button type="button" class="btn btn-success">Success</button>
+     <button type="button" class="btn .btn-outline-success">Success</button>
 
     </div>
 
