--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
+
+    <div class="d-grid gap-2 col-6 mx-auto"></div>
      <a href="historia.html" class="btn" style="align-self: center;">Conheça mais sobre a nossa história</a>
+    </div>
 
     </div>
 
