--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
 
 
-    <div class="d-grid gap-2 col-6 mx-auto"></div>
+    <div class="d-grid gap-2 col-6 mx-auto">
      <a href="historia.html" class="btn" style="align-self: center;">Conheça mais sobre a nossa história</a>
     </div>
 
