--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </section>
 
   <!--HISTÓRIA-->
-  <section id="historia" class="historia">
+  <section id="hist" class="hist">
     <div class="content">
     <h1 class="heading"><span>Quem somos</span></h1>
       <p>A 3D Tecnology nasceu da necessidade de oferecer soluções eficientes em automação industrial e a 
@@ -64,9 +64,7 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
-
-    
-     <a href="historia.html" class="btn" style="align-self: center;">Conheça mais sobre a nossa história</a>
+        <a href="historia.html" class="btn" style="align-self: center;">Conheça mais sobre a nossa história</a>
 
     </div>
 
