--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
-        <a href="historia.html" class="btn" style="align-self: center;">Conheça mais sobre a nossa história</a>
+        <a href="historia.html" class="btn btn-outline" style="align-self: center;">Conheça mais sobre a nossa história</a>
 
     </div>
 
