--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 <p>Dispositivos sob medida</p>
 <p>Integração de CLPs, IHMs e sensores</p>
 <p>Mapeamento de gargalos e perdas</p>
+
+<a href="servicos.html">Encontre o serviço que você precisa</a>
 </div>
 </div>
 </div>
