--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 <p>Integração de CLPs, IHMs e sensores</p>
 <p>Mapeamento de gargalos e perdas</p>
 
-<a href="servicos.html" style="color: black; font-size: 2rem; padding-top: 10rem;">Encontre o serviço que você precisa</a>
+<ul class="nav nav-underline">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="servicos.html">Encontre o serviço que você precisa </a>
+  </li>
 </div>
 </div>
 </div>
