--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
 <p>Integração de CLPs, IHMs e sensores</p>
 <p>Mapeamento de gargalos e perdas</p>
 
-<ul class="nav nav-underline">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Encontre o serviço que você precisa</a>
-  </li>
-  </ul>
+<a href="servicos.html" style="color: black; font-size: 2rem; padding-top: 12rem;">Encontre o serviço que você precisa</a>
+</div>
 </div>
 </div>
   </section>
