--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p>Integração de CLPs, IHMs e sensores</p>
 <p>Mapeamento de gargalos e perdas</p>
 
-<a href="servicos.html" style="color: black; font-size: 2rem; padding-top: 12rem;">Encontre o serviço que você precisa</a>
+<a href="servicos.html" class="link">Encontre o serviço que você precisa</a>
 </div>
 </div>
 </div>
