--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         a paixão por tecnologia e a necessidade de acompanhar a constante evolução da indústria. 
         </p>
 
-        <a href="historia.html" class="link" style="color: #22ac00; font-size: 2rem;">Conheça mais sobre a nossa história</a>
+        <a href="historia.html" class="link" style="color: #22ac00; font-size: 2rem; padding-top: 10rem;">Conheça mais sobre a nossa história</a>
 
     </div>
 
