--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
   <ul>
     <li><a href="https://wa.me/554192024096">(41) 99202-4096</a>
     </li>
+    <li><a href="https://wa.me/554191654990">(41) 99165-4990</a>
+    </li>
     <li>
       <a href="#">ademar@3dtecnology.com.br</a>
+    </li>
+    <li> <a href="#">adm@3dtecnology.com.br</a>
     </li>
   </ul>
 </div>
