--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <footer id="footer" class="footer">
 <div class="container">
 <div class="footer-col">
-  <h4 class="headin-footer">Entre em contato conosco</h4>
+  <h4 class="heading-footer">Entre em contato conosco</h4>
   <ul>
     <li><a href="https://wa.me/554192024096">(41) 99202-4096</a>
     </li>
