--- a/historia.html
+++ b/historia.html
@@ -59,12 +59,16 @@
   <footer id="footer" class="footer">
 <div class="container">
 <div class="footer-col">
-  <h4 class="headin-footer">Entre em contato conosco</h4>
+  <h4 class="heading-footer">Entre em contato conosco</h4>
   <ul>
     <li><a href="https://wa.me/554192024096">(41) 99202-4096</a>
     </li>
+    <li><a href="https://wa.me/554191654990">(41) 99165-4990</a>
+    </li>
     <li>
       <a href="#">ademar@3dtecnology.com.br</a>
+    </li>
+    <li> <a href="#">adm@3dtecnology.com.br</a>
     </li>
   </ul>
 </div>
@@ -75,6 +79,14 @@
     <a href="https://www.instagram.com/3d_tecnology/"><ion-icon name="logo-instagram"></ion-icon></a>
     <a href="https://br.linkedin.com/in/ademar-santos-cordeiro-624917124"><ion-icon name="logo-linkedin"></ion-icon></a>
   </div>
+</div>
+<div class="footer-col">
+  <h4 class="heading-footer">Nos faça uma visita</h4>
+  <ul>
+    <li>
+      <a href="https://www.google.com/maps/place/R.+Marcelino+Jasinski,+863+-+Tindiquera,+Arauc%C3%A1ria+-+PR,+83708-132/@-25.5791708,-49.3824317,17z/data=!3m1!4b1!4m6!3m5!1s0x94dd02696e20f25f:0x5d732c56f9fd3dc3!8m2!3d-25.5791708!4d-49.3824317!16s%2Fg%2F11hdz036yt?entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoASAFQAw%3D%3D">Rua Marcelino Jasinski , 863 -  Araucária Pr</a>
+    </li>
+  </ul>
 </div>
 </div>
 <div class="footer-bottom">
