--- a/servicos.html
+++ b/servicos.html
@@ -126,7 +126,7 @@
   </div>
 </div>
 <div class="footer-col">
-  <h4 class="heading-footer">Nos faça uma visita</h4>
+  <h4 class="heading-footer">Faça uma visita</h4>
   <ul>
     <li>
       <a href="https://www.google.com/maps/place/R.+Marcelino+Jasinski,+863+-+Tindiquera,+Arauc%C3%A1ria+-+PR,+83708-132/@-25.5791708,-49.3824317,17z/data=!3m1!4b1!4m6!3m5!1s0x94dd02696e20f25f:0x5d732c56f9fd3dc3!8m2!3d-25.5791708!4d-49.3824317!16s%2Fg%2F11hdz036yt?entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoASAFQAw%3D%3D">Rua Marcelino Jasinski , 863 -  Araucária Pr</a>
@@ -141,4 +141,5 @@
 </body>
  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </html>
