--- a/servicos.html
+++ b/servicos.html
@@ -32,7 +32,7 @@
   </section>
 
 <section id="detalhes" class="detalhes">
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: fit-content;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: fit-content;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
@@ -58,7 +58,7 @@
     </div>
   </div>
 </div>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: fit-content;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
@@ -71,7 +71,7 @@
     </div>
   </div>
 </div>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: fit-content;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
@@ -84,7 +84,7 @@
     </div>
   </div>
 </div>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: fit-content;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
