--- a/servicos.html
+++ b/servicos.html
@@ -32,67 +32,49 @@
   </section>
 
 <section id="detalhes" class="detalhes">
-<div class="card border-success mb-3" style="max-width: fit-content;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Automação Industrial</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
-</div>
-<div class="card mb-3" style="max-width: fit-content;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Projetos Elétricos</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a short card.</p>
       </div>
     </div>
   </div>
-</div>
-<div class="card mb-3" style="max-width: fit-content;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Sistemas Supervisórios</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
   </div>
-</div>
-<div class="card mb-3" style="max-width: fit-content;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Consultorias</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
-</div>
-<div class="card mb-3" style="max-width: fit-content;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="img/Foto menor.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
+   <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Impressão 3D</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
