--- a/servicos.html
+++ b/servicos.html
@@ -35,7 +35,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="img/Foto menor.png" class="card-img-top" alt="...">
+      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Automação Industrial</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -44,7 +44,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="img/Foto menor.png" class="card-img-top" alt="...">
+      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Projetos Elétricos</h5>
         <p class="card-text">This is a short card.</p>
@@ -53,7 +53,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="img/Foto menor.png" class="card-img-top" alt="...">
+      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sistemas Supervisórios</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -62,7 +62,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="img/Foto menor.png" class="card-img-top" alt="...">
+      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Consultorias</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -71,7 +71,7 @@
   </div>
    <div class="col">
     <div class="card h-100">
-      <img src="img/Foto menor.png" class="card-img-top" alt="...">
+      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Impressão 3D</h5>
         <p class="card-text">This is a longer card, with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
