--- a/servicos.html
+++ b/servicos.html
@@ -51,6 +51,8 @@
       </div>
     </div>
   </div>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
@@ -69,6 +71,8 @@
       </div>
     </div>
   </div>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 g-4"></div>
    <div class="col">
     <div class="card h-100">
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
