--- a/servicos.html
+++ b/servicos.html
@@ -39,7 +39,7 @@
       <div class="card-body">
         <h5 class="card-title">Automação Industrial</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="">Ver mais</a>
+        <a href="" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
@@ -49,7 +49,7 @@
       <div class="card-body">
         <h5 class="card-title">Projetos Elétricos</h5>
         <p class="card-text">This is a short card.</p>
-        <a href="">Ver mais</a>
+        <a href="" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
@@ -61,7 +61,7 @@
       <div class="card-body">
         <h5 class="card-title">Sistemas Supervisórios</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        <a href="">Ver mais</a>
+        <a href="" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
       <div class="card-body">
         <h5 class="card-title">Consultorias</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="">Ver mais</a>
+        <a href="" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
@@ -83,7 +83,7 @@
       <div class="card-body">
         <h5 class="card-title">Impressão 3D</h5>
         <p class="card-text">This is a longer card, with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="">Ver mais</a>
+        <a href="" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
