--- a/servicos.html
+++ b/servicos.html
@@ -39,7 +39,7 @@
       <div class="card-body">
         <h5 class="card-title">Automação Industrial</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="" class="btn">Ver mais</a>
+        <a href="Automacao.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
