--- a/servicos.html
+++ b/servicos.html
@@ -49,7 +49,7 @@
       <div class="card-body">
         <h5 class="card-title">Projetos Elétricos</h5>
         <p class="card-text">This is a short card.</p>
-        <a href="" class="btn">Ver mais</a>
+        <a href="projetos_eletricos.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
