--- a/servicos.html
+++ b/servicos.html
@@ -61,7 +61,7 @@
       <div class="card-body">
         <h5 class="card-title">Sistemas Supervisórios</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        <a href="" class="btn">Ver mais</a>
+        <a href="supervisorios.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
