--- a/servicos.html
+++ b/servicos.html
@@ -71,7 +71,7 @@
       <div class="card-body">
         <h5 class="card-title">Consultorias</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="" class="btn">Ver mais</a>
+        <a href="consultorias.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
