--- a/servicos.html
+++ b/servicos.html
@@ -24,7 +24,7 @@
   <section id="historia" class="historia">
     <div class="content">
     <h1 class="heading" style="padding-top: 5rem;"><span>Nosso serviços</span></h1>
-      <p style="font-size: 2rem;">Na 3D Tecnology nós oferecemos uma variedade de serviços 
+      <p style="font-size: 2rem;">Na 3D Tecnology, nós oferecemos uma variedade de serviços 
         para atender as necessidades específicas de cada cliente.  
         </p>
     </div>
