--- a/projetos_eletricos.html
+++ b/projetos_eletricos.html
@@ -60,5 +60,7 @@
   <p>&copy; 2025 3D Tecnology. Todos os direitos reservados.</p>
 </div>
   </footer>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
