--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <li><a href="https://wa.me/554191654990">(41) 99165-4990</a>
     </li>
     <li>
-      <a href="#">ademar@3dtecnology.com.br</a>
+      <a href="#footer">ademar@3dtecnology.com.br</a>
     </li>
-    <li> <a href="#">adm@3dtecnology.com.br</a>
+    <li> <a href="#footer">adm@3dtecnology.com.br</a>
     </li>
   </ul>
 </div>
