--- a/servicos.html
+++ b/servicos.html
@@ -38,7 +38,9 @@
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Automação Industrial</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">A Automação industrial é o processo de utilizar tecnologias avançadas,
+         sistemas de controle e equipamentos para operar máquinas e processos
+         de maneira eficiente e com o mínimo de intervenção humana</p>
         <a href="Automacao.html" class="btn">Ver mais</a>
       </div>
     </div>
@@ -102,9 +104,9 @@
     <li><a href="https://wa.me/554191654990">(41) 99165-4990</a>
     </li>
     <li>
-      <a href="#">ademar@3dtecnology.com.br</a>
+      <a href="#footer">ademar@3dtecnology.com.br</a>
     </li>
-    <li> <a href="#">adm@3dtecnology.com.br</a>
+    <li> <a href="#footer">adm@3dtecnology.com.br</a>
     </li>
   </ul>
 </div>
