--- a/servicos.html
+++ b/servicos.html
@@ -50,7 +50,9 @@
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Projetos Elétricos</h5>
-        <p class="card-text">This is a short card.</p>
+        <p class="card-text">O projeto elétrico é o conjunto de todas as informações necessárias 
+          para realizar o trabalho: cálculos, desenhos, gráficos, materiais e tudo mais que se refere a 
+          uma instalação ou equipamento elétrico baseado em normas técnicas. </p>
         <a href="projetos_eletricos.html" class="btn">Ver mais</a>
       </div>
     </div>
