texto (de novo)

--- a/servicos.html
+++ b/servicos.html
@@ -64,7 +64,11 @@
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sistemas Supervisórios</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text">Os sistemas supervisórios permitem que sejam monitoradas e rastreadas 
+          informações de um processo produtivo. Tais informações são coletadas através de equipamentos 
+          de aquisição de dados e, em seguida, manipuladas, analisadas, armazenadas e, posteriormente, 
+          apresentadas ao usuário. Estes sistemas também são chamados de SCADA 
+          (Supervisory Control and Data Acquisition).</p>
         <a href="supervisorios.html" class="btn">Ver mais</a>
       </div>
     </div>
