--- a/servicos.html
+++ b/servicos.html
@@ -78,7 +78,9 @@
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Consultorias</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">implementação de novas tecnologias e a otimização de sistemas, 
+          ajudando as empresas a identificar as ferramentas mais adequadas para suas necessidades, 
+          com o objetivo de aumentar a eficiência operacional e a competitividade no mercado. </p>
         <a href="consultorias.html" class="btn">Ver mais</a>
       </div>
     </div>
