--- a/servicos.html
+++ b/servicos.html
@@ -92,7 +92,8 @@
       <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Impressão 3D</h5>
-        <p class="card-text">This is a longer card, with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Criação de objetos tridimensionais a partir de modelos digitais 
+          usando o processo de manufatura aditiva, construindo a peça camada por camada.</p>
         <a href="3D.html" class="btn">Ver mais</a>
       </div>
     </div>
