--- a/Automacao.html
+++ b/Automacao.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/foto site (1).jpeg" class="d-block w-100" alt="...">
+      <img src="img/Logo 3dt_OFFICIAL_Cartão.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
