--- a/Automacao.html
+++ b/Automacao.html
@@ -20,6 +20,7 @@
     </nav>
   </header>
 
+  <Section class="carousel">
   <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,6 +59,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+</Section>
     
   <!--FOOTER-->
   <footer id="footer" class="footer">
