--- a/Automacao.html
+++ b/Automacao.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <Section class="carousel">
+  <Section class="carousel" style=" display: flex;">
   <div id="carouselExampleDark" class="carousel carousel-dark slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
