--- a/Automacao.html
+++ b/Automacao.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <p style="padding-top: 50rem; padding-bottom: 50rem;">Oi</p>
+  <video src="..." class="object-fit-fill" autoplay></video>
     
   <!--FOOTER-->
   <footer id="footer" class="footer">
