--- a/Automacao.html
+++ b/Automacao.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <video src="..." class="object-fit-fill" autoplay></video>
+  <video src="vid/video 2.mp4" class="object-fit-fill" autoplay>Prensa Molas</video>
     
   <!--FOOTER-->
   <footer id="footer" class="footer">
