--- a/Automacao.html
+++ b/Automacao.html
@@ -19,8 +19,10 @@
       <a href="#footer">Contato</a>
     </nav>
   </header>
-
-  <video src="vid/video 2.mp4" class="object-fit-fill" autoplay>Prensa Molas</video>
+  
+  <div class="vid">
+   <video src="vid/video 2.mp4" class="object-fit-fill" autoplay>Prensa Molas</video>
+  </div>
     
   <!--FOOTER-->
   <footer id="footer" class="footer">
