--- a/Automacao.html
+++ b/Automacao.html
@@ -19,8 +19,8 @@
       <a href="#footer">Contato</a>
     </nav>
   </header>
-  
-  <div class="vid">
+
+  <div class="vid" style="padding: 15rem, 15rem, 15rem, 15rem;">
    <video src="vid/video 2.mp4" class="object-fit-fill" autoplay>Prensa Molas</video>
   </div>
     
