--- a/Automacao.html
+++ b/Automacao.html
@@ -20,7 +20,10 @@
     </nav>
   </header>
 
-
+  <div class="info">
+  <h2>Prensa molas</h2>
+  </div>
+  
   <!--FOOTER-->
   <footer id="footer" class="footer">
 <div class="container">
