--- a/Automacao.html
+++ b/Automacao.html
@@ -22,8 +22,9 @@
 
   <div class="info">
   <h2>Prensa molas</h2>
+  <img src="img/Foto de perfil (170x170px).png" alt="">
   </div>
-  
+
   <!--FOOTER-->
   <footer id="footer" class="footer">
 <div class="container">
