--- a/servicos.html
+++ b/servicos.html
@@ -32,6 +32,7 @@
   </section>
 
 <section id="detalhes" class="detalhes">
+  <div class="container text-center">
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
@@ -98,6 +99,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 </section>
     
