--- a/Automacao.html
+++ b/Automacao.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <div class="info">
+  <div class="info" style="padding: 20rem, 20rem, 20rem, 20rem;">
   <h2>Prensa molas</h2>
   <img src="img/Foto de perfil (170x170px).png" alt="">
   </div>
