--- a/servicos.html
+++ b/servicos.html
@@ -103,6 +103,23 @@
 </div>
 </div>
 
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Automação Industrial</h5>
+        <p class="card-text">A Automação industrial é o processo de utilizar tecnologias avançadas,
+         sistemas de controle e equipamentos para operar máquinas e processos
+         de maneira eficiente e com o mínimo de intervenção humana</p>
+         <a href="Automacao.html" class="btn">Ver mais</a>
+      </div>
+    </div>
+  </div>
+</div>
+
     
 
   <!--FOOTER-->
