--- a/servicos.html
+++ b/servicos.html
@@ -144,11 +144,13 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">Automação Industrial</h5>
-        <p class="card-text">A Automação industrial é o processo de utilizar tecnologias avançadas,
-         sistemas de controle e equipamentos para operar máquinas e processos
-         de maneira eficiente e com o mínimo de intervenção humana</p>
-         <a href="Automacao.html" class="btn">Ver mais</a>
+        <h5 class="card-title">Sistemas Supervisórios</h5>
+        <p class="card-text">Os sistemas supervisórios permitem que sejam monitoradas e rastreadas 
+          informações de um processo produtivo. Tais informações são coletadas através de equipamentos 
+          de aquisição de dados e, em seguida, manipuladas, analisadas, armazenadas e, posteriormente, 
+          apresentadas ao usuário. Estes sistemas também são chamados de SCADA 
+          (Supervisory Control and Data Acquisition).</p>
+         <a href="supervisorios.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
