--- a/servicos.html
+++ b/servicos.html
@@ -156,6 +156,23 @@
   </div>
 </div>
 
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Consultorias</h5>
+        <p class="card-text">Implementação de novas tecnologias e a otimização de sistemas, 
+          ajudando as empresas a identificar as ferramentas mais adequadas para suas necessidades, 
+          com o objetivo de aumentar a eficiência operacional e a competitividade no mercado.</p>
+         <a href="consultorias.html" class="btn">Ver mais</a>
+      </div>
+    </div>
+  </div>
+</div>
+
     
 
   <!--FOOTER-->
