--- a/servicos.html
+++ b/servicos.html
@@ -33,76 +33,6 @@
   </section>
 
 
-  <div class="container text-center">
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card h-100">
-      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Automação Industrial</h5>
-        <p class="card-text">A Automação industrial é o processo de utilizar tecnologias avançadas,
-         sistemas de controle e equipamentos para operar máquinas e processos
-         de maneira eficiente e com o mínimo de intervenção humana</p>
-        <a href="Automacao.html" class="btn">Ver mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Projetos Elétricos</h5>
-        <p class="card-text">O projeto elétrico é o conjunto de todas as informações necessárias 
-          para realizar o trabalho: cálculos, desenhos, gráficos, materiais e tudo mais que se refere a 
-          uma instalação ou equipamento elétrico baseado em normas técnicas. </p>
-        <a href="projetos_eletricos.html" class="btn">Ver mais</a>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card h-100">
-      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Sistemas Supervisórios</h5>
-        <p class="card-text">Os sistemas supervisórios permitem que sejam monitoradas e rastreadas 
-          informações de um processo produtivo. Tais informações são coletadas através de equipamentos 
-          de aquisição de dados e, em seguida, manipuladas, analisadas, armazenadas e, posteriormente, 
-          apresentadas ao usuário. Estes sistemas também são chamados de SCADA 
-          (Supervisory Control and Data Acquisition).</p>
-        <a href="supervisorios.html" class="btn">Ver mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Consultorias</h5>
-        <p class="card-text">implementação de novas tecnologias e a otimização de sistemas, 
-          ajudando as empresas a identificar as ferramentas mais adequadas para suas necessidades, 
-          com o objetivo de aumentar a eficiência operacional e a competitividade no mercado. </p>
-        <a href="consultorias.html" class="btn">Ver mais</a>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="row row-cols-1 row-cols-md-3 g-4"></div>
-   <div class="col">
-    <div class="card h-100">
-      <img src="img/Foto de perfil (170x170px).png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Impressão 3D</h5>
-        <p class="card-text">Criação de objetos tridimensionais a partir de modelos digitais 
-          usando o processo de manufatura aditiva, construindo a peça camada por camada.</p>
-        <a href="3D.html" class="btn">Ver mais</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -168,6 +98,22 @@
           ajudando as empresas a identificar as ferramentas mais adequadas para suas necessidades, 
           com o objetivo de aumentar a eficiência operacional e a competitividade no mercado.</p>
          <a href="consultorias.html" class="btn">Ver mais</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Impressão 3D</h5>
+        <p class="card-text">Criação de objetos tridimensionais a partir de modelos digitais 
+          usando o processo de manufatura aditiva, construindo a peça camada por camada.</p>
+         <a href="3D.html" class="btn">Ver mais</a>
       </div>
     </div>
   </div>
