--- a/servicos.html
+++ b/servicos.html
@@ -32,7 +32,7 @@
 
   </section>
 
-
+<div class="container">
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -118,7 +118,7 @@
     </div>
   </div>
 </div>
-
+</div>
     
 
   <!--FOOTER-->
