--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content">
       <h3>3D Tecnology</h3>
       <p>Soluções em automação para a sua empresa</p>
-      <a href="https://wa.me/554192024096" class="btn"><ion-icon name="logo-whatsapp"></ion-icon> Entre em contato conosco</a>
+      <a href="https://wa.me/554192024096" class="btn btn-success"><ion-icon name="logo-whatsapp"></ion-icon> Entre em contato conosco</a>
     </div>
 
   </section>
