--- a/servicos.html
+++ b/servicos.html
@@ -44,7 +44,7 @@
         <p class="card-text">A Automação industrial é o processo de utilizar tecnologias avançadas,
          sistemas de controle e equipamentos para operar máquinas e processos
          de maneira eficiente e com o mínimo de intervenção humana</p>
-         <a href="Automacao.html" class="btn">Ver mais</a>
+         <a href="Automacao.html" class="btn btn-outline-success">Ver mais</a>
       </div>
     </div>
   </div>
