--- a/servicos.html
+++ b/servicos.html
@@ -63,7 +63,7 @@
         <p class="card-text">O projeto elétrico é o conjunto de todas as informações necessárias 
           para realizar o trabalho: cálculos, desenhos, gráficos, materiais e tudo mais que se refere a 
           uma instalação ou equipamento elétrico baseado em normas técnicas.</p>
-         <a href="projetos_eletricos.html" class="btn">Ver mais</a>
+          <button href="projetos_eletricos.html" type="button" class="btn btn-outline-success">Ver mais</button>
       </div>
     </div>
   </div>
