--- a/servicos.html
+++ b/servicos.html
@@ -84,7 +84,7 @@
           de aquisição de dados e, em seguida, manipuladas, analisadas, armazenadas e, posteriormente, 
           apresentadas ao usuário. Estes sistemas também são chamados de SCADA 
           (Supervisory Control and Data Acquisition).</p>
-         <a href="supervisorios.html" class="btn">Ver mais</a>
+         <a href="supervisorios.html" class="btn btn-outline-success">Ver mais</a>
       </div>
     </div>
   </div>
@@ -103,7 +103,7 @@
         <p class="card-text">Implementação de novas tecnologias e a otimização de sistemas, 
           ajudando as empresas a identificar as ferramentas mais adequadas para suas necessidades, 
           com o objetivo de aumentar a eficiência operacional e a competitividade no mercado.</p>
-         <a href="consultorias.html" class="btn">Ver mais</a>
+         <a href="consultorias.html" class="btn btn-outline-success">Ver mais</a>
       </div>
     </div>
   </div>
@@ -121,7 +121,7 @@
         <h5 class="card-title">Impressão 3D</h5>
         <p class="card-text">Criação de objetos tridimensionais a partir de modelos digitais 
           usando o processo de manufatura aditiva, construindo a peça camada por camada.</p>
-         <a href="3D.html" class="btn">Ver mais</a>
+         <a href="3D.html" class="btn btn-outline-success">Ver mais</a>
       </div>
     </div>
   </div>
