--- a/projetos_eletricos.html
+++ b/projetos_eletricos.html
@@ -11,7 +11,7 @@
      <!--HEADER-->
   <header class="header">
     <a href="index.html" class="logo">
-      <img src="img\Logo branca.png" alt="Logo 3D Tecnology">
+      <img src="img/placeholders and drawings/logo/Logo branca.png" alt="Logo 3D Tecnology">
     </a>
     <nav class="navbar">
       <a href="index.html">Home</a>
