--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
   </section>
 
+  <section>
+
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex;">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -89,7 +91,7 @@
     </div>
   </div>
 </div>
-
+</section>
   <!--CONTATO
   
       <p>(41) 99202-4096</p>
