--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   </section>
 
-  <section>
+  <section class="clientes">
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex;">
   <div class="carousel-inner">
