--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <section class="clientes">
-    <h1>Nossos Parceiros</h1>
+    <h2><span>Nossos Parceiros</span></h2>
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex;">
   <div class="carousel-inner">
     <div class="carousel-item active">
